--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -3015,7 +3015,12 @@ br {
 }
 
 .o-achievement:hover .o-achievement__tooltip {
-  bottom: 11rem;
+  bottom: 12.5rem;
+  opacity: 1;
+}
+
+.o-achievement--secret:hover .o-achievement__tooltip {
+  bottom: 10rem;
   opacity: 1;
 }
 
@@ -3025,9 +3030,11 @@ br {
 }
 
 .o-achievement__tooltip {
-  width: 20rem;
+  width: 35rem;
   position: absolute;
   bottom: 10.2rem;
+  left: 50%;
+  transform: translateX(-50%);
   z-index: 2;
   font-size: 1.4rem;
   opacity: 0;
@@ -3035,10 +3042,31 @@ br {
   background: var(--color-base);
   border: 0.1rem solid black;
   border-radius: var(--var-border-radius, 0.8rem);
-  margin-left: -5rem;
   padding: 0.4rem;
   transition-duration: 0.3s;
   pointer-events: none;
+}
+
+/* Fix tooltip overflow due to grid taking up the full width of the viewport */
+
+.o-achievement:first-child > .o-achievement__tooltip {
+  left: 0;
+  transform: none;
+}
+
+.o-achievement:first-child > .o-achievement__tooltip::after {
+  left: 17%;
+}
+
+.o-achievement:last-child > .o-achievement__tooltip {
+  left: auto;
+  right: 0;
+  transform: none;
+}
+
+.o-achievement:last-child > .o-achievement__tooltip::after {
+  left: auto;
+  right: 15%;
 }
 
 .o-achievement__tooltip::after {
@@ -3085,17 +3113,18 @@ br {
 }
 
 .o-achievement__tooltip__name {
-  font-size: 1.5rem;
+  font-size: 1.9rem;
   font-weight: bold;
   margin-bottom: 0.6rem;
 }
 
 .o-achievement__tooltip__description {
+  font-size: 1.5rem;
   margin-bottom: 0.4rem;
 }
 
 .o-achievement__tooltip__reward {
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   font-style: italic;
 }
 
